@@ -4,9 +4,11 @@
 #define	_CREATEM_H
 
 
-int create_msgarea(char *, faddr *);
-int CheckEchoGroup(char *, int, faddr *);
-
+int	create_msgarea(char *, faddr *);
+int	CheckEchoGroup(char *, int, faddr *);
+void	msged_areas(FILE *);
+void	gold_areas(FILE *);
+void	gold_akamatch(FILE *);
 
 #endif
 
